--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
-    "react-data-table-component": "^7.5.2",
+    "react-data-table-component-with-filter": "^7.4.5",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-modal-component-hrnet": "^1.0.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.3.2",
+    "serve": "^13.0.4",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
@@ -40,5 +41,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "."
 }
