--- a/package.json
+++ b/package.json
@@ -3,17 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
-    "react-data-table-component-with-filter": "^7.4.5",
+    "react-data-table-component": "^7.5.2",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-modal-component-hrnet": "^1.0.4",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.3.2",
+    "redux": "^4.2.0",
     "serve": "^13.0.4",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
